--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .body {
     background-color: rgb(170, 170, 170);
 }
@@ -94,13 +98,27 @@ p span {
     text-align: center;
 }
 
-.gallery-container {
+.image-gallery {
+    box-sizing: border-box;
+    display: flex;
+    border: solid black 3px;
+}
+
+.gallery-container2 {
+    border: white solid 3px;
+}
+
+
+/*
+.gallery-container 2{
+    border: solid white 3px;
     display: flex;
     width: 50px;
     height: auto;
-}
+}*/
 
 .gallery {
-    width: 100px;
+    border: solid blue 1px;
+    max-width: 200px;
     height: auto;
 }
