--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-* {
-    box-sizing: border-box;
-}
-
+                                * {
+                                    box-sizing: border-box;
+                                }
+                                /* TESTING*********************
 .body {
     background-color: rgb(170, 170, 170);
 }
@@ -14,6 +14,8 @@ h1 {
     color: rgb(255, 255, 255);
 }
 
+
+
 .first-box {
     display: flex;
     box-sizing: border-box;
@@ -22,6 +24,7 @@ h1 {
     margin-right: 20px;
     /*
     padding-top: 5%;*/
+                                /* TESTING*********************
     padding-bottom: 5%;
     border: black 1px solid;
     background-color: rgb(119, 169, 243);
@@ -51,7 +54,7 @@ h1 {
 
 
 /*SECOND BOX..............................*/
-
+                                /* TESTING*********************
 .three-icon-container {
     display: flex;
     box-sizing: border-box;
@@ -91,7 +94,7 @@ h1 {
 }
 
 
-/*BOX 3.....................*/
+/*BOX 3.....................
 
 p span {
     display: block;
@@ -100,10 +103,15 @@ p span {
 
 .image-gallery {
     box-sizing: border-box;
+    /*
     display: flex;
-    border: solid black 3px;
+    flex-wrap: wrap;*/
+                                /* TESTING*********************
+border: solid black 3px;
+
 }
 
+/*this
 .gallery-container2 {
     border: white solid 3px;
 }
@@ -116,9 +124,100 @@ p span {
     width: 50px;
     height: auto;
 }*/
-
+                                /* TESTING*********************
 .gallery {
     border: solid blue 1px;
     max-width: 200px;
     height: auto;
 }
+#gal-pic-b-1 {
+    height: 350px;
+    width: 300px;
+}
+#gal-pic-b-2 {
+    height: 350px;
+    width: 300px;
+}
+#gal-pic-b-3 {
+    height: 350px;
+    width: 300px;
+}
+#gal-pic-b-4 {
+    height: 350px;
+    width: 300px;
+}
+#gal-pic-b-5 {
+    height: 350px;
+    width: 300px;
+}
+#gal-pic-b-6 {
+    height: 350px;
+    width: 300px;
+}
+#gal-pic-b-7 {
+    height: 350px;
+    width: 300px;
+}
+#gal-pic-b-8 {
+    height: 350px;
+    width: 300px;
+}
+#gal-pic-b-9 {
+    height: 350px;
+    width: 300px;
+}
+#gal-pic-b-1 {
+    height: 350px;
+    width: 300px;
+}
+
+TESTING*****************
+             SOMEHOW, UNCOMMENTING AND SAVING THIS BELOW SHIFTS ALL THE TEXT TO THE RIGHT))               
+   div.gallery {
+       margin: 5px;
+       border: 1px solid rgb(245, 7, 7);
+       float: left;
+       width: 180px;
+   }
+   
+   div.gallery:hover {
+       border: 1px solid rgb(194, 245, 12);
+   }
+   
+   div.gallery img {
+       width: 100%;
+       height: auto;
+       border: 1px solid rgb(30, 216, 5);
+   }
+   
+   div.desc {
+       padding: 15px;
+       text-align: center;
+   }
+
+   */
+                                
+                                .row {
+                                    display: flex;
+                                    flex-wrap: wrap;
+                                }
+                                /* Create four equal columns */
+                                
+                                .column {
+                                    flex: 25%;
+                                    padding: 20px;
+                                }
+                                /* On screens that are 992px wide or less, go from four columns to two columns */
+                                
+                                @media screen and (max-width: 992px) {
+                                    .column {
+                                        flex: 50%;
+                                    }
+                                }
+                                /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+                                
+                                @media screen and (max-width: 600px) {
+                                    .row {
+                                        flex-direction: column;
+                                    }
+                                }
