--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
-                                * {
-                                    box-sizing: border-box;
-                                }
-                                /* TESTING*********************
+* {
+    box-sizing: border-box;
+}
+
+
+/*TESTING**********************/
+
 .body {
-    background-color: rgb(170, 170, 170);
+    background-color: rgba(160, 154, 154, 0.719);
 }
 
 .main {
-    background-color: rgb(255, 0, 0);
+    background-color: rgba(60, 182, 151, 0);
 }
 
 h1 {
     color: rgb(255, 255, 255);
 }
-
-
 
 .first-box {
     display: flex;
@@ -22,39 +23,38 @@ h1 {
     margin-top: 5%;
     margin-left: 20px;
     margin-right: 20px;
-    /*
-    padding-top: 5%;*/
-                                /* TESTING*********************
-    padding-bottom: 5%;
-    border: black 1px solid;
     background-color: rgb(119, 169, 243);
+    border: black 1px solid;
+    padding-top: 5%;
 }
 
+
+/* TESTING********************* */
+
+padding-bottom: 5%;
+
+}
 .first-box-image-container {
     border: black 1px solid;
 }
-
 .first-box-text {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 .first-box-text-container {
     border: black 1px solid;
 }
-
 .middle-white-space {
     text-align: center;
 }
-
 .suit-image {
     width: 70%;
     height: auto;
 }
 
-
 /*SECOND BOX..............................*/
-                                /* TESTING*********************
+
+/* TESTING**********************/
 .three-icon-container {
     display: flex;
     box-sizing: border-box;
@@ -62,54 +62,63 @@ h1 {
     margin-right: 20px;
     background-color: rgb(119, 169, 243);
     color: white;
-    border: black 1px solid;
+    /*border: black 1px solid;*/
 }
-
 .multi-icons {
     border: 1px white solid;
     padding: 1%;
 }
-
 .icon-div {
     text-align: center;
-    border: white solid 1px;
     border-bottom-style: solid;
     border-bottom: 4px white solid;
     border-bottom-width: 4px;
     font-size: 40px;
 }
-
 .fa-solid {
     color: white;
     text-align: center;
     padding-bottom: 10px;
 }
-
 .icon-2-text {
     text-align: center;
 }
-
 .icon-3-text {
     text-align: right;
 }
 
-
-/*BOX 3.....................
-
+/*BOX 3..................... */
 p span {
     display: block;
     text-align: center;
 }
-
 .image-gallery {
     box-sizing: border-box;
-    /*
+    border: solid black 3px;
+}
+.bottom-box {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+.contact {
+    border: white solid 1px;
+    color: white;
+    background-color: inherit;
+}
+.contact:hover {
+    background-color: white;
+    color: black;
+}
+.footer {
+    text-align: center;
+}
+
+/*
     display: flex;
     flex-wrap: wrap;*/
-                                /* TESTING*********************
-border: solid black 3px;
 
-}
+/*TESTING**********************/
 
 /*this
 .gallery-container2 {
@@ -124,8 +133,8 @@ border: solid black 3px;
     width: 50px;
     height: auto;
 }*/
-                                /* TESTING*********************
-.gallery {
+
+/* TESTING********************* .gallery {
     border: solid blue 1px;
     max-width: 200px;
     height: auto;
@@ -170,54 +179,72 @@ border: solid black 3px;
     height: 350px;
     width: 300px;
 }
+TESTING***************** SOMEHOW,
+UNCOMMENTING AND SAVING THIS BELOW SHIFTS ALL THE TEXT TO THE RIGHT)) div.gallery {
+    margin: 5px;
+    border: 1px solid rgb(245,
+    7,
+    7);
+    float: left;
+    width: 180px;
+}
+div.gallery:hover {
+    border: 1px solid rgb(194,
+    245,
+    12);
+}
+div.gallery img {
+    width: 100%;
+    height: auto;
+    border: 1px solid rgb(30,
+    216,
+    5);
+}
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+*/
+#abcpic1 {
+    width: 200px;
+    height: 200px;
+}
+#abcpic2 {
+    width: 200px;
+    height: 200px;
+}
+#abcpic3 {
+    width: 200px;
+    height: 200px;
+}
+#abcpic4 {
+    width: 200px;
+    height: 200px;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
 
-TESTING*****************
-             SOMEHOW, UNCOMMENTING AND SAVING THIS BELOW SHIFTS ALL THE TEXT TO THE RIGHT))               
-   div.gallery {
-       margin: 5px;
-       border: 1px solid rgb(245, 7, 7);
-       float: left;
-       width: 180px;
-   }
-   
-   div.gallery:hover {
-       border: 1px solid rgb(194, 245, 12);
-   }
-   
-   div.gallery img {
-       width: 100%;
-       height: auto;
-       border: 1px solid rgb(30, 216, 5);
-   }
-   
-   div.desc {
-       padding: 15px;
-       text-align: center;
-   }
+/* Create four equal columns */
+.column {
+    flex: 25%;
+    padding: 20px;
+    /* WHY DOES ADDING A COLOR ALTER THE FORMATTING*/
+    
+    background-color: rgba(245, 10, 206, 0.863);
+}
 
-   */
-                                
-                                .row {
-                                    display: flex;
-                                    flex-wrap: wrap;
-                                }
-                                /* Create four equal columns */
-                                
-                                .column {
-                                    flex: 25%;
-                                    padding: 20px;
-                                }
-                                /* On screens that are 992px wide or less, go from four columns to two columns */
-                                
-                                @media screen and (max-width: 992px) {
-                                    .column {
-                                        flex: 50%;
-                                    }
-                                }
-                                /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-                                
-                                @media screen and (max-width: 600px) {
-                                    .row {
-                                        flex-direction: column;
-                                    }
-                                }
+/* On screens that are 992px wide or less, go from four columns to two columns */
+@media screen and (max-width: 992px) {
+    .column {
+        flex: 50%;
+    }
+}
+
+/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .row {
+        flex-direction: column;
+    }
+}
