--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 -check icon boxed on mobile
 -make main image stand out more similar to the original page
 -add buttons
--Tell Matt
 */
 
 * {
@@ -18,7 +17,7 @@
 }
 
 .main {
-    background-color: rgba(60, 182, 151, 0);
+    background-color: rgba(182, 60, 141, 0);
 }
 
 h1 {
@@ -52,9 +51,24 @@ h1 {
 }
 
 .first-box-text-container {
-    /*border: black 1px solid;*/
+    border: black 1px solid;
     vertical-align: middle;
     padding-right: 4%;
+}
+
+#app-button {
+    color: rgb(119, 169, 243);
+    border: inherit;
+    font-weight: bolder;
+    text-align: center;
+    justify-content: center;
+    border: 1px solid rgb(119, 169, 243);
+}
+
+#app-button:hover {
+    background-color: rgb(119, 169, 243);
+    color: white;
+    border: 1px solid black;
 }
 
 .middle-white-space {
@@ -66,6 +80,10 @@ h1 {
     height: auto;
     margin-bottom: 50px;
     margin-left: 50px;
+}
+
+p.pic-desc {
+    align-content: center;
 }
 
 
@@ -173,7 +191,6 @@ p span {
 @media screen and (max-width: 600px) {
     .flex-icon-container {
         flex-direction: column;
-        color: green;
         text-align: center;
         /*why doesnt text align target all of them*/
     }
