--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 }
 
 .body {
-    /*background-color: rgba(160, 154, 154, 0.719);*/
     background: url(https://wallpaperaccess.com/full/186476.jpg);
     background-repeat: repeat;
 }
@@ -51,24 +50,25 @@ h1 {
 }
 
 .first-box-text-container {
-    border: black 1px solid;
+    /*border: black 1px solid;*/
     vertical-align: middle;
     padding-right: 4%;
 }
 
 #app-button {
+    text-align: center;
+}
+
+#appointment {
     color: rgb(119, 169, 243);
     border: inherit;
     font-weight: bolder;
-    text-align: center;
-    justify-content: center;
-    border: 1px solid rgb(119, 169, 243);
 }
 
-#app-button:hover {
+#appointment:hover {
     background-color: rgb(119, 169, 243);
     color: white;
-    border: 1px solid black;
+    border: white 1px solid;
 }
 
 .middle-white-space {
@@ -126,7 +126,7 @@ p.pic-desc {
 }
 
 
-/*BOX 3..................... */
+/*THIRD BOX ..................... */
 
 p span {
     display: block;
@@ -184,117 +184,9 @@ p span {
     flex: 33.3%;
 }
 
-@media screen and (max-width:992px) {
-    flex: 50%;
-}
-
-@media screen and (max-width: 600px) {
-    .flex-icon-container {
-        flex-direction: column;
-        text-align: center;
-        /*why doesnt text align target all of them*/
-    }
-}
-
 .footer {
     text-align: center;
 }
-
-
-/*
-    display: flex;
-    flex-wrap: wrap;*/
-
-
-/*TESTING**********************/
-
-
-/*this
-.gallery-container2 {
-    border: white solid 3px;
-}
-
-
-/*
-.gallery-container 2{
-    border: solid white 3px;
-    display: flex;
-    width: 50px;
-    height: auto;
-}*/
-
-
-/* TESTING********************* .gallery {
-    border: solid blue 1px;
-    max-width: 200px;
-    height: auto;
-}
-#gal-pic-b-1 {
-    height: 350px;
-    width: 300px;
-}
-#gal-pic-b-2 {
-    height: 350px;
-    width: 300px;
-}
-#gal-pic-b-3 {
-    height: 350px;
-    width: 300px;
-}
-#gal-pic-b-4 {
-    height: 350px;
-    width: 300px;
-}
-#gal-pic-b-5 {
-    height: 350px;
-    width: 300px;
-}
-#gal-pic-b-6 {
-    height: 350px;
-    width: 300px;
-}
-#gal-pic-b-7 {
-    height: 350px;
-    width: 300px;
-}
-#gal-pic-b-8 {
-    height: 350px;
-    width: 300px;
-}
-#gal-pic-b-9 {
-    height: 350px;
-    width: 300px;
-}
-#gal-pic-b-1 {
-    height: 350px;
-    width: 300px;
-}
-TESTING***************** SOMEHOW,
-UNCOMMENTING AND SAVING THIS BELOW SHIFTS ALL THE TEXT TO THE RIGHT)) div.gallery {
-    margin: 5px;
-    border: 1px solid rgb(245,
-    7,
-    7);
-    float: left;
-    width: 180px;
-}
-div.gallery:hover {
-    border: 1px solid rgb(194,
-    245,
-    12);
-}
-div.gallery img {
-    width: 100%;
-    height: auto;
-    border: 1px solid rgb(30,
-    216,
-    5);
-}
-div.desc {
-    padding: 15px;
-    text-align: center;
-}
-*/
 
 #abcpic1 {
     width: 200px;
@@ -322,17 +214,30 @@ div.desc {
 }
 
 
-/* Create four equal columns */
+/*FA icons boxes*/
+
+@media screen and (max-width:992px) {
+    flex: 33%;
+}
+
+@media screen and (max-width: 600px) {
+    .flex-icon-container {
+        flex-direction: column;
+        text-align: center;
+        /*why doesnt text align target all of them*/
+    }
+}
+
+
+/*PICTURE GALLERY BELOW*/
 
 .column {
     flex: 25%;
     padding: 20px;
+    text-align: center;
     /* WHY DOES ADDING A COLOR ALTER THE FORMATTING*/
     background-color: rgba(245, 10, 206, 0.863);
 }
-
-
-/* On screens that are 992px wide or less, go from four columns to two columns */
 
 @media screen and (max-width: 992px) {
     .column {
@@ -340,20 +245,8 @@ div.desc {
     }
 }
 
-
-/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-
 @media screen and (max-width: 600px) {
     .row {
         flex-direction: column;
     }
 }
-
-
-/* MAKING RESPONSIVE FONT SIZING
-@media screen and (max-width) {
-    .first-box-text {
-
-    }
-}
-*/
